<resources>
    <string name="app_name">RunningTrackerApp</string>
    <string name="onboard_text">Ketahui perkembangan aktivitas berlarimu dengan Running Tracker!</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Masuk atau daftar</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="welcome">Halo !</string>
    <string name="invalid_username">Nama pengguna tidak valid</string>
    <string name="invalid_password">Kata sandi harus >5 karakter</string>
    <string name="login_failed">Masuk gagal</string>
    <string name="jarak">Jarak</string>
    <string name="kalori">Kalori</string>
    <string name="waktu">Waktu</string>
    <string name="mulai_berlari">MULAI BERLARI</string>
    <string name="artikel_kesehatan">Artikel Kesehatan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="baca_artikel">Baca Artikel</string>
    <string name="hello_blank_fragment">Artikel</string>
    <string name="title_activity_maps">Map</string>
    <string name="mulai_sejarah">SEJARAH</string>
    <string name="mulai_statistik">STATISTIK</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="nama_pengguna">nama pengguna</string>
    <string name="kata_sandi">kata sandi</string>
    <string name="konfirmasi_sandi">konfirmasi sandi</string>
    <string name="batal">Batal</string>
    <string name="daftar">Daftar</string>
    <string name="metode_lain">metode lain:</string>
    <string name="edit_journey_details">Ubah Detail Lari</string>
    <string name="rename_title">Ubah Judul</string>
    <string name="recorded_journey">Rekaman Lari</string>
    <string name="add_a_comment">Masukkan Komentar</string>
    <string name="what_an_amazing_journey">Lari yang menyenangkan!</string>
    <string name="change_rating_must_be_between_1_5">Ubah Rating (diantara 1-5)</string>
    <string name="change_image">Ubah Gambar</string>
    <string name="save_journey">SIMPAN HASIL</string>
    <string name="email_pengguna">email pengguna</string>
    <string name="masuk">Masuk</string>
    <string name="mulai">Mulai</string>
    <string name="bahasa">Bahasa</string>
    <string name="logout">Keluar</string>
    <string name="distance_run">Jarak lari:</string>
    <string name="average_speed">Kecepatan:</string>
    <string name="duration">Durasi:</string>
    <string name="select_date">Pilih Tanggal</string>
    <string name="record_distance_in_1_journey">Rekor jarak dalam 1 lari:</string>
    <string name="distance_today">Jarak Hari Ini:</string>
    <string name="time_running_today">Waktu Hari Ini:</string>
    <string name="all_time_distance_ran">Total Jarak Lari:</string>
    <string name="this_week">Minggu Ini</string>
    <string name="click_on_a_specific_journey_for_more_information">Pilih sejarah lari untuk informasi lebih lanjut</string>
    <string name="time">waktu</string>
    <string name="date">Tanggal:</string>
    <string name="rating">Rating:</string>
    <string name="view_map">Lihat Peta</string>
    <string name="edit_journey">Ubah Sejarah Lari</string>
    <string name="stop">Berhenti</string>
</resources>